Fix book button hitreg and adjust spacing

--- a/src/routes/BookingStyles.css
+++ b/src/routes/BookingStyles.css
@@ -50,7 +50,6 @@
   background: transparent;
   color: white;
   border: transparent;
-  margin-left: 10px;
 }
 
 .AABtn{
